homepage backend strucuture

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^4.0.6",
     "@strapi/plugin-cloud": "5.0.3",
     "@strapi/plugin-users-permissions": "5.0.3",
     "@strapi/strapi": "5.0.3",
@@ -20,7 +21,6 @@
     "react-router-dom": "^6.0.0",
     "styled-components": "^6.0.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
